<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Samin_total</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_lab_name">LAB - 015</string>
    <string name="title_gas_storage">가스저장고</string>
    <string name="title_gas_room">룸가스</string>
    <string name="title_waste_liquor">폐액레벨</string>
    <string name="title_oxygen">산소농도모듈</string>
    <string name="title_steamer">스팀기</string>
    <string name="title_alert_log">알람로그</string>
    <string name="title_admin">관리자</string>
    <string name="title_products_setting">제품설정</string>
    <string name="title_control">관제</string>
    <string name="title_version">버전</string>
    <string name="title_password">비밀번호</string>
    <string name="title_admin_confirm">관리자 확인</string>
    <string name="title_event_log">이벤트 발생 내역</string>
    <string name="title_gasstorage_event_log">가스 저장고 이벤트 발생 내역</string>
    <string name="title_gasroom_event_log">가스 룸 이벤트 발생 내역</string>
    <string name="title_steamer_event_log">스팀기 이벤트 발생 내역</string>
    <string name="title_oxygen_event_log">산소 이벤트 발생 내역</string>
    <string name="title_wasteliquor_event_log">폐액 이벤트 발생 내역</string>
    <string name="text_use_mirror">RS485 미러링 여부</string>
    <string name="text_use_modbus">MODBUS RTU 연동</string>
    <string name="text_modbus_baudrate">MODBUS RTU 통신속도</string>
    <string name="text_modbus_id">MODBUS RTU ID</string>
    <string name="text_new_password">신규 비밀번호</string>
    <string name="text_password_confirm">비밀번호 확인</string>
    <string name="text_confirm">확인</string>
    <string name="text_password">Password</string>
    <string name="text_save">저장</string>
    <string name="text_cancel">취소</string>
    <string name="title_gas_lab">GAS -</string>
    <string name="title_level_lab">LEVEL -</string>
    <string name="title_oxygen_lab">OXYGEN -</string>
    <string name="title_level_temperature_lab">LEVEL/TEMP -</string>
    <string name="title_tempHum_lab">TEMP/HUM -</string>
    <string name="text_setting_pairing">미러링 설정 복제</string>
    <string name="text_aq_setting">AQ Setting</string>
    <string name="text_connection">연결</string>
    <string name="title_id">ID</string>
    <string name="text_sensor_usable">센서사용여부</string>
    <string name="text_layout">화면배치</string>
    <string name="text_PasswordChange">변경</string>
    <string name="text_use_modbus_tcp">MODBUS TCP 연동</string>
    <string name="text_use_modbus_udp">MODBUS UDP 연동</string>
    <string name="text_use_modbus_tcp_port">MODBUS TCP 포트</string>
    <string name="text_use_modbus_udp_port">MODBUS UDP 포트</string>
    <string name="text_setting_copy">설정 전송</string>
    <string name="text_gasleaktest">가스 누출 테스트</string>
    <string name="text_select_all">모두 선택</string>
    <string name="title_tempHum">온습도</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
