<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ControlFragment">


    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="5"
        app:layout_constraintBottom_toTopOf="@id/save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/text_use_mirror"
            android:textColor="#000000"
            android:textSize="18pt" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:text="@string/text_setting_pairing"
            android:textColor="#000000"
            android:textSize="18pt" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical|center_horizontal"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:text="@string/text_use_modbus"
            android:textColor="#000000"
            android:textSize="18pt" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical|center_horizontal"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:text="@string/text_modbus_baudrate"
            android:textColor="#000000"
            android:textSize="18pt" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/spinner_background"
            android:gravity="center"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:text="@string/text_modbus_id"
            android:textColor="#000000"
            android:textSize="18pt" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/spinner_background"
            android:gravity="center"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </GridLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        style="@style/saveButton"
        android:layout_marginBottom="138dp"
        android:text="@string/text_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_btn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_btn"
        style="@style/cancelButton"
        android:layout_marginStart="85dp"
        android:text="@string/text_cancel"
        app:layout_constraintBottom_toBottomOf="@id/save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/save_btn" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/labsislogo_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>