<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayoutFragment">

    <TextView
        android:id="@+id/sensorlist_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="센서 내역"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/btn_radioGroup"
        app:layout_constraintStart_toStartOf="@id/btn_radioGroup" />

    <RadioGroup
        android:id="@+id/btn_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintStart_toStartOf="@id/scrollView">

        <RadioButton
            android:id="@+id/btn_gasStorage_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_gas_storage"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/btn_gasRoom_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_gas_room"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/btn_wasteLiuor_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_waste_liquor"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/btn_oxygen_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_oxygen"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/btn_steamer_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_steamer"
            android:textSize="15sp" />
    </RadioGroup>



    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="500dp"
        android:layout_height="480dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/container_border"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sensorRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" />
        <!--            child view margin top 10dp 씩 줄것-->


    </ScrollView>

    <LinearLayout
        android:id="@+id/setting_view"
        android:layout_width="500dp"
        android:layout_height="480dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/container_border"
        android:orientation="vertical"
        android:paddingTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/boardsetting_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/boardsetting_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="AQ보드 설정"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/setting_view"
        app:layout_constraintStart_toStartOf="@id/setting_view" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        style="@style/saveButton"
        android:layout_marginBottom="20dp"
        android:text="저장"
        app:layout_constraintBottom_toTopOf="@id/setting_view"
        app:layout_constraintEnd_toEndOf="@id/setting_view"
        app:layout_constraintHorizontal_chainStyle="packed" />


    <ImageView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:src="@drawable/labsislogo_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>