<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/grid_layout"
        android:layout_width="0dp"
        android:layout_marginStart="320dp"
        android:layout_marginEnd="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="254dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_newPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/text_new_password"
            android:textSize="18pt"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_newPassword"
            android:layout_width="391dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="38dp"
            app:layout_constraintStart_toEndOf="@id/tv_newPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:gravity="center_vertical"
            android:text="@string/text_password_confirm"
            android:textSize="18pt"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_newPassword"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_newPasswordConfirm"
            android:layout_width="391dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        style="@style/saveButton"
        android:layout_marginBottom="138dp"
        android:text="@string/text_PasswordChange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_btn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_btn"
        style="@style/cancelButton"
        android:layout_marginStart="85dp"
        android:text="@string/text_cancel"
        app:layout_constraintBottom_toBottomOf="@id/save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/save_btn" />

    <ImageView
        android:id="@+id/labsislogo"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/labsislogo_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>