<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">


    <TextView
        android:id="@+id/lab_ID_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/nanumbarungothicbold"
        android:text="@string/title_place"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lab_ID_TextView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <com.coai.uikit.samin.status.TopStatusPathView
                android:id="@+id/gasDock_MainStatus"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:tag="0"
                android:visibility="visible"
                app:status_type="GasDock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/title_gas_storage"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <com.coai.uikit.samin.status.TopStatusPathView
                android:id="@+id/gasRoom_MainStatus"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:tag="0"
                android:visibility="visible"
                app:status_type="GasRoom" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/title_gas_room"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <com.coai.uikit.samin.status.TopStatusPathView
                android:id="@+id/wasteLiquor_MainStatus"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:tag="0"
                android:visibility="visible"
                app:status_type="WasteLiquor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/title_waste_liquor"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <com.coai.uikit.samin.status.TopStatusPathView
                android:id="@+id/oxygen_MainStatus"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:tag="0"
                android:visibility="visible"
                app:status_type="Oxygen" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/title_oxygen"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <com.coai.uikit.samin.status.TopStatusPathView
                android:id="@+id/steamer_MainStatus"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:tag="0"
                android:visibility="visible"
                app:status_type="Steamer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/title_steamer"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingBar_Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/labsislogo">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_setting"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/button_setting" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_alert"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/button_nonalert" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_sound"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/sound_ic" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_scan"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/button_scan" />
    </LinearLayout>

    <ImageView
        android:id="@+id/labsislogo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:src="@drawable/labsislogo_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>